tests/parser-test-files/bad-files/parse-fn.2.error
error: Malformed function
  --> test:4:16
   |
 4 |  (define f (fn ()))
   |                  ^ expected function body
